--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
   <head>
     <title>Klevis Todi Portfolio</title>
@@ -23,7 +19,7 @@
       <!-- Header -->
       <header id="header" class="alt">
         <div class="spotlight">
-          <span class="image"><img src="images/klevis_selfie.jpg" alt="" /></span>
+          <span class="image"><img src="images/Klevis Headshot.JPG" alt="" /></span>
         </div>
         <h1>Klevis Todi</h1>
         <p>
@@ -256,6 +252,28 @@
                     ><span class="skill-dot empty"></span>
                   </div>
                 </div>
+                <div class="skill-item">
+                  <div class="skill-name">Adobe Suites</div>
+                  <div class="skill-level">
+                    <span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot empty"></span>
+                    
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="skill-name">Word</div>
+                  <div class="skill-level">
+                    <span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot"></span
+                    ><span class="skill-dot"></span>
+                  </div>
+                </div>
+               
               </div>
             </div>
 
